<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/pref_general_header">

        <ListPreference
            app:defaultValue="auto"
            app:entries="@array/file_access_entries"
            app:entryValues="@array/file_access_values"
            app:key="fileAccess"
            app:title="@string/pref_file_access"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="languageAudio"
            android:defaultValue="device"
            app:title="@string/pref_language_audio"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="frameRateMatching"
            app:defaultValue="false"
            app:summaryOn="@string/pref_framerate_matching_on"
            app:summaryOff="@string/pref_framerate_matching_off"
            app:title="@string/pref_framerate_matching" />

        <SwitchPreferenceCompat
            app:key="allowSystemFrameRate"
            app:defaultValue="true"
            app:summaryOn="@string/pref_allow_system_framerate_on"
            app:summaryOff="@string/pref_allow_system_framerate_off"
            app:title="@string/pref_allow_system_framerate" />

        <SwitchPreferenceCompat
            app:key="autoPiP"
            app:defaultValue="false"
            app:summaryOn="@string/pref_auto_pip_on"
            app:summaryOff="@string/pref_auto_pip_off"
            app:title="@string/pref_auto_pip" />

        <SwitchPreferenceCompat
            app:key="showClock"
            app:defaultValue="false"
            app:summaryOn="@string/pref_show_clock_on"
            app:summaryOff="@string/pref_show_clock_off"
            app:title="@string/pref_show_clock" />

        <SwitchPreferenceCompat
            app:key="skipSilence"
            app:defaultValue="false"
            app:summaryOn="@string/pref_skip_silence_on"
            app:summaryOff="@string/pref_skip_silence_off"
            app:title="@string/pref_skip_silence" />

        <SwitchPreferenceCompat
            app:key="repeatToggle"
            app:defaultValue="false"
            app:summary="@string/pref_repeat_toggle_summary"
            app:title="@string/pref_repeat_toggle" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_skip_header">

        <SwitchPreferenceCompat
            app:key="skipEnabled"
            app:defaultValue="true"
            app:summaryOn="@string/pref_skip_enabled_on"
            app:summaryOff="@string/pref_skip_enabled_off"
            app:title="@string/pref_skip_enabled" />

        <ListPreference
            app:defaultValue="button"
            app:dependency="skipEnabled"
            app:entries="@array/skip_mode_entries"
            app:entryValues="@array/skip_mode_values"
            app:key="skipMode"
            app:title="@string/pref_skip_mode"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="button"
            app:dependency="skipEnabled"
            app:entries="@array/skip_mode_entries"
            app:entryValues="@array/skip_mode_values"
            app:key="skipModeCredits"
            app:title="@string/pref_skip_mode_credits"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="skipFetchOnline"
            app:defaultValue="true"
            app:dependency="skipEnabled"
            app:summaryOn="@string/pref_skip_fetch_on"
            app:summaryOff="@string/pref_skip_fetch_off"
            app:title="@string/pref_skip_fetch" />

        <SwitchPreferenceCompat
            app:key="skipHideWhenLocked"
            app:defaultValue="false"
            app:dependency="skipEnabled"
            app:summaryOn="@string/pref_skip_hide_locked_on"
            app:summaryOff="@string/pref_skip_hide_locked_off"
            app:title="@string/pref_skip_hide_locked" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_subtitle_header">

        <SwitchPreferenceCompat
            app:key="subtitleStyleEmbedded"
            app:defaultValue="true"
            android:summaryOn="@string/pref_subtitle_style_embedded_on"
            android:summaryOff="@string/pref_subtitle_style_embedded_off"
            app:title="@string/pref_subtitle_style_embedded" />

        <SwitchPreferenceCompat
            app:key="subtitleStyleBold"
            app:defaultValue="false"
            android:summaryOn="@string/pref_subtitle_style_bold_on"
            android:summaryOff="@string/pref_subtitle_style_bold_off"
            app:title="@string/pref_subtitle_style_bold" />

        <Preference
            app:title="@string/pref_captioning_preferences">
            <intent android:action="android.settings.CAPTIONING_SETTINGS" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_dangerous_header">

        <Preference
            app:selectable="false"
            app:summary="@string/pref_dangerous_warning" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/decoder_priority_entries"
            app:entryValues="@array/decoder_priority_values"
            app:key="decoderPriority"
            app:title="@string/pref_decoder_priority"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="tunneling"
            app:defaultValue="false"
            app:summary="@string/pref_tunneling_summary"
            app:title="@string/pref_tunneling" />

        <SwitchPreferenceCompat
            app:key="mapDV7ToHevc"
            app:defaultValue="false"
            app:summaryOn="@string/pref_map_dv7_on"
            app:summaryOff="@string/pref_map_dv7_off"
            app:title="@string/pref_map_dv7" />

        <Preference
            app:key="resetRevokedAudioMimes"
            app:title="@string/pref_reset_audio_workarounds"
            app:summary="@string/pref_reset_audio_workarounds_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_privacy_header">

        <SwitchPreferenceCompat
            app:key="crashReporting"
            app:defaultValue="true"
            app:summaryOn="@string/pref_crash_reporting_on"
            app:summaryOff="@string/pref_crash_reporting_off"
            app:title="@string/pref_crash_reporting" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="updateCategory"
        app:title="@string/pref_update_header">

        <Preference
            app:key="currentVersion"
            app:selectable="false"
            app:title="@string/pref_current_version" />

        <SwitchPreferenceCompat
            app:key="autoUpdate"
            app:defaultValue="true"
            app:summaryOn="@string/pref_auto_update_on"
            app:summaryOff="@string/pref_auto_update_off"
            app:title="@string/pref_auto_update" />

        <Preference
            app:key="checkUpdateNow"
            app:summary="@string/pref_check_update_summary"
            app:title="@string/pref_check_update" />

    </PreferenceCategory>

</PreferenceScreen>